<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <TextView
                android:id="@+id/tvGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_greeting"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/brown"
                android:fontFamily="@font/jersey10_regular"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvLevelGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_level_info"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/brown"
                app:layout_constraintTop_toBottomOf="@id/tvGreeting"
                app:layout_constraintStart_toStartOf="@id/tvGreeting" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/mascot"
            android:background="@drawable/circle_background"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintTop_toTopOf="@+id/linear1"
            app:layout_constraintBottom_toBottomOf="@+id/linear1"
            app:layout_constraintEnd_toEndOf="parent"
            android:elevation="4dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:autofillHints="search"
        android:hint="@string/home_search"
        android:background="@drawable/rounded_edittext_selector"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="@color/brown"
        android:textColorHint="@color/brown"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawableTint="@color/brown"
        android:inputType="text"/>


    <!-- Isi List + Empty State -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="MissingClass">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- RecyclerView with bottom padding -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="80dp"
                android:clipToPadding="false" />

            <!-- Empty View in center -->
            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_empty_state"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/brown"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
